<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appsku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="frmSignup">From Sign up</string>
    <string name="todo">TODO</string>
    <string name="textUsername">Username</string>
    <string name="textPassword">Password</string>
    <string name="texthintusername">Masukkan Username</string>
    <string name="texthintpassword">Masukkan Password</string>
    <string name="txthintusername">Masukkan Username</string>
    <string name="txthintpassword">Masukkan Password</string>
    <string name="txtUsername">Username</string>
    <string name="txtBtnSimpan">Simpan</string>
    <string name="txtBtnBack">Back</string>
    <string name="txtSignIn">Sign In</string>
    <string name="txtBtnSignIn">Sign In</string>
    <string name="txtBtnBackSignUp">Sign Up</string>

</resources>
