<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center"
    android:orientation="horizontal"
    android:textAlignment="gravity"
    android:visibility="visible"
    tools:context="com.example.appsku.MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:orientation="vertical"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSignins"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/bottom_padding"
                android:paddingLeft="@dimen/left_padding"
                android:paddingRight="@dimen/right_padding"
                android:paddingTop="@dimen/top_padding"
                android:text="@string/signin" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frmSignInLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding"
            android:text="@string/txtSignIn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUsername"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txthintusername"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/texthintpassword"
                android:inputType="numberPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingTop="@dimen/top_padding" >

            <Button
                android:id="@+id/btnBackSignIn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnBackSignUp" />

            <Button
                android:id="@+id/btnSimpanSignIn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnSignIn" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frmSignUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_vertical|center"
            android:gravity="center_vertical|center"
            android:text="@string/frmSignup"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUsername"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txthintusername"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txthintpassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <Button
                android:id="@+id/btnBackSignUp"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnBack" />

            <Button
                android:id="@+id/btnSimpanSignup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnSimpan" />

        </LinearLayout>

    </LinearLayout>
 
</LinearLayout>